# iupitermag

./: .gitignore  Cargo.toml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: CI.yml  build.yml  ci.yml  publish.yml
docs/: index.md  validation.md
docs/modules/: currentsheet.md  internal.md
iupitermag-core/: Cargo.toml  README.md
iupitermag-core/src/: convert.rs  currentsheet.rs  field.rs  internal.rs  legendre.rs  lib.rs  trace.rs
iupitermag-py/: Cargo.toml  pyproject.toml
iupitermag-py/scripts/: benchmark.py  internal_pure_python.py  plot_surface_field.py  profile.py  trace_field_custom.py  trace_field_lines.py
iupitermag-py/src/: currentsheet.rs  field.rs  internal.rs  lib.rs  trace.rs
iupitermag-py/src/iupitermag/: currentsheet.py  field.py
scripts/: benchmark.py  internal_pure_python.py  plot_surface_field.py  trace_field_lines.py
src/: aux.rs  coefficients.rs  convert.rs  currentsheet.rs  field.rs  internal.rs  legendre.rs  lib.rs  libr.rs  mag.rs  main.rs  trace.rs
src/iupitermag/: __init__.py  currentsheet.py  field.py  internal.py  trace.py
tests/: plot_surface.py  test_field.py  test_trace.py
