[package]
name = "iupitermag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "iupitermag"
crate-type = ["cdylib"]

[dependencies]
lazyivy = "0.3.1"
ndarray = { version = "0.17.2", features = ["rayon"] }
numpy = { version = "0.28.0" }
pyo3 = { version = "0.28.2", features = ["extension-module", "abi3-py39", "multiple-pymethods"] }
