[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "iupitermag"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy>=1.16",
    "maturin>=1.4"
]

[project.optional-dependencies]
tests = [
    "pytest",
]
dynamic = ["version"]

[tool.maturin]
python-source = "src"
features = ["pyo3/extension-module"]
