[project]
name = "iupitermag"
version = "0.1.4"
description = "Python package with Rust bindings to calculate the magnetic field in Jupiter's magnetosphere."
readme = "README.md"
authors = [
    { name = "ysar", email = "31999239+ysar@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
]

[tool.maturin]
module-name = "iupitermag._core"
python-source = "src"
features = ["pyo3/extension-module"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "pyright>=1.1.380",
]
