[package]
name = "iupitermag"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Rust crate for modeling Jupiter's internal and current sheet magnetic fields."
readme = "README.md"
repository = "https://github.com/ysar/iupitermag.git"
categories = ["science"]

[dependencies]
lazyivy = "0.6.4"
ndarray = { version = "0.17.2", features = ["rayon"] }
